--- a/html/team.html
+++ b/html/team.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/" class="navbar-title">Quorridor</a>
+        <a href="../index.html" class="navbar-title">Quorridor</a>
         <div class="navbar-links">
-            <a href="/html/team.html" class="navbar-links">Team</a>
-            <a href="/html/project.html" class="navbar-links">Project</a>
+            <a href="/" class="navbar-links">Team</a>
+            <a href="/project.html" class="navbar-links">Project</a>
         </div>
     </nav>
     <main>
