--- a/html/team.html
+++ b/html/team.html
@@ -13,8 +13,8 @@
     <nav class="navbar">
         <a href="../index.html" class="navbar-title">Quorridor</a>
         <div class="navbar-links">
-            <a href="/" class="navbar-links">Team</a>
-            <a href="/project.html" class="navbar-links">Project</a>
+            <a href="" class="navbar-links">Team</a>
+            <a href="project.html" class="navbar-links">Project</a>
         </div>
     </nav>
     <main>
