--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Quorridor</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="/" class="navbar-title">Quorridor</a>
+        <a href="" class="navbar-title">Quorridor</a>
         <div class="navbar-links">
-            <a href="/html/team.html" class="navbar-links">Team</a>
-            <a href="/html/project.html" class="navbar-links">Project</a>
+            <a href="html/team.html" class="navbar-links">Team</a>
+            <a href="html/project.html" class="navbar-links">Project</a>
         </div>
     </nav>
     <main>
