navbar and main page refinements

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
         <div class="navbar-links">
             <a href="html/team.html" class="navbar-links">Team</a>
             <a href="html/project.html" class="navbar-links">Project</a>
+            <a href="" class="navbar-links" id="download-ico"><img src="media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
         <section class="main-top">
             <h1>Quorridor</h1>
-            <h3>The game that is... so fun idk</h3>
+            <h2>The game that is... so fun idk</h2>
+            <br>
+            <br>
+            <br>
+            <a id="main-download">Download</a>
         </section>
     </main>
 </body>
