--- a/html/project.html
+++ b/html/project.html
@@ -15,6 +15,7 @@
         <div class="navbar-links">
             <a href="team.html" class="navbar-links">Team</a>
             <a href="" class="navbar-links">Project</a>
+            <a href="" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
