fix typo in game name

--- a/html/project.html
+++ b/html/project.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Quorridor</title>
+    <title>Quoridor</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="../index.html" class="navbar-title">Quorridor</a>
+        <a href="../index.html" class="navbar-title">Quoridor</a>
         <div class="navbar-links">
             <a href="team.html" class="navbar-links">Team</a>
             <a href="" class="navbar-links">Project</a>
