fix typo in game name

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Quorridor</title>
+    <title>Quoridor</title>
 </head>
 <body>
     <nav class="navbar">
-        <a href="" class="navbar-title">Quorridor</a>
+        <a href="" class="navbar-title">Quoridor</a>
         <div class="navbar-links">
             <a href="html/team.html" class="navbar-links">Team</a>
             <a href="html/project.html" class="navbar-links">Project</a>
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <section class="main-top">
-            <h1>Quorridor</h1>
+            <h1>Quoridor</h1>
             <h2>The game that is... so fun idk</h2>
             <br>
             <br>
