added deliverables to navbar and down arrow on main screen

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="navbar-links">
             <a href="html/team.html" class="navbar-links">Team</a>
             <a href="html/project.html" class="navbar-links">Project</a>
+            <a href="html/deliverables.html" class="navbar-links">Deliverables</a>
             <a href="" class="navbar-links" id="download-ico"><img src="media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
@@ -26,6 +27,16 @@
             <br>
             <br>
             <a id="main-download">Download</a>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="#main-low" id="arr_down"><img src="media/arr_down.svg"></a>
+            <!-- <a><img src="media/arr_down.svg"></a>
+            <a><img src="media/arr_down.svg"></a> -->
+        </section>
+        <section id="main-low">
+
         </section>
     </main>
 </body>
