--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/mainpage.css">
     <title>Quoridor</title>
 </head>
 <body>
@@ -20,23 +21,63 @@
         </div>
     </nav>
     <main>
-        <section class="main-top">
+        <section id="main-top">
             <h1>Quoridor</h1>
             <h2>The game that is... so fun idk</h2>
-            <br>
-            <br>
-            <br>
             <a id="main-download">Download</a>
             <br>
-            <br>
-            <br>
-            <br>
-            <a href="#main-low" id="arr_down"><img src="media/arr_down.svg"></a>
+            <a href="#main-mid"><img src="media/arr_down.svg" id="arr_down"></a>
             <!-- <a><img src="media/arr_down.svg"></a>
             <a><img src="media/arr_down.svg"></a> -->
         </section>
+        <section id="main-mid">
+            <h1>A beloved board game - made digital</h1>
+            <article>
+                <video width="100%" autoplay muted loop class="main-mid-element">
+                    <source src="media/GameplayFast.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="card main-mid-element">
+                    <p>
+                        kjafhjaf;f<br>
+                        aflkshurhfjsfvs<br>
+                        jfsjgfefgysh<br>
+                        idk<br>
+                        some text<br>
+                        paragraph<br>
+                        blah blah<br>
+                        aaaaa<br>
+                        aaaaaaaa<br>
+                        jcksgyafgjabha<br>
+                        brrrrrr<br>
+                        tung tung tung sahur<br>
+                        bombardilo crocodilo<br>
+                        some more text idk<br>
+                    </p>
+                </div>
+            </article>
+        </section>
         <section id="main-low">
-
+            <div class="card">
+                <img src="media/gamestart.png">
+                <p>
+                    this is how the game starts
+                </p>
+            </div>
+            <img src="media/arr_right.svg" class="arr_right">
+            <div class="card">
+                <img src="media/midgame.png">
+                <p>
+                    this is how it looks when you play
+                </p>
+            </div>
+            <img src="media/arr_right.svg" class="arr_right">
+            <div class="card">
+                <img src="media/gameover.png">
+                <p>
+                    this is the end screen
+                </p>
+            </div>
         </section>
     </main>
 </body>
