added footer, updated other pages navbar/footer and made small patches

--- a/html/deliverables.html
+++ b/html/deliverables.html
@@ -14,15 +14,19 @@
         <a href="../index.html" class="navbar-title">Quoridor</a>
         <div class="navbar-links">
             <a href="team.html" class="navbar-links">Team</a>
-            <a href="" class="navbar-links">Project</a>
+            <a href="project.html" class="navbar-links">Project</a>
+            <a href="" class="navbar-links">Deliverables</a>
             <a href="" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
         <section class="main-top">
-            <h1>Project</h1>
-            <h3>This is our project idk</h3>
+            <h1>Deliverables</h1>
+            <h3>This is our deliverables idk</h3>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Quoridor. All rights reserved.</p>
+    </footer>
 </body>
 </html>
