--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
             <a id="main-download">Download</a>
             <br>
             <a href="#main-mid"><img src="media/arr_down.svg" id="arr_down"></a>
-            <!-- <a><img src="media/arr_down.svg"></a>
-            <a><img src="media/arr_down.svg"></a> -->
         </section>
         <section id="main-mid">
             <h1>A beloved board game - made digital</h1>
@@ -80,5 +78,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Quoridor. All rights reserved.</p>
+    </footer>
 </body>
 </html>
