--- a/html/team.html
+++ b/html/team.html
@@ -15,6 +15,7 @@
         <div class="navbar-links">
             <a href="" class="navbar-links">Team</a>
             <a href="project.html" class="navbar-links">Project</a>
+            <a href="deliverables.html" class="navbar-links">Deliverables</a>
             <a href="" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
@@ -24,5 +25,8 @@
             <h3>This is our team idk</h3>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Quoridor. All rights reserved.</p>
+    </footer>
 </body>
 </html>
