team page layout and small patches

--- a/html/team.html
+++ b/html/team.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/teampage.css">
+    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
     <title>Quoridor</title>
 </head>
 <body>
@@ -20,9 +22,34 @@
         </div>
     </nav>
     <main>
-        <section class="main-top">
-            <h1>Team</h1>
-            <h3>This is our team idk</h3>
+        <section>
+            <h1>Our Team</h1>
+            <article>
+                <div class="card">
+                    <img src="">
+                    <p>
+                        I'm Andras blah blah blah
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="">
+                    <p>
+                        I'm Illia blah blah blah
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="">
+                    <p>
+                        I'm Iskren blah blah blah
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="">
+                    <p>
+                        I'm Stefan blah blah blah
+                    </p>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
