--- a/html/team.html
+++ b/html/team.html
@@ -26,25 +26,33 @@
             <h1>Our Team</h1>
             <article>
                 <div class="card">
-                    <img src="">
+                    <div class="image_cropper">
+                        <img src="../media/placeholder.png">
+                    </div>
                     <p>
                         I'm Andras blah blah blah
                     </p>
                 </div>
                 <div class="card">
-                    <img src="">
+                    <div class="image_cropper">
+                        <img src="../media/placeholder.png">
+                    </div>
                     <p>
                         I'm Illia blah blah blah
                     </p>
                 </div>
                 <div class="card">
-                    <img src="">
+                    <div class="image_cropper">
+                        <img src="../media/placeholder.png">
+                    </div>
                     <p>
                         I'm Iskren blah blah blah
                     </p>
                 </div>
                 <div class="card">
-                    <img src="">
+                    <div class="image_cropper">
+                        <img src="../media/placeholder.png">
+                    </div>
                     <p>
                         I'm Stefan blah blah blah
                     </p>
