improved site responsiveness

--- a/html/download.html
+++ b/html/download.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
-    <!-- <link rel="stylesheet" href="/css/styles.css"> -->
+    <!-- <link rel="stylesheet" href="/css/teampage.css"> -->
+    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
     <title>Quoridor</title>
 </head>
 <body>
@@ -15,16 +16,13 @@
         <a href="../index.html" class="navbar-title">Quoridor</a>
         <div class="navbar-links">
             <a href="team.html" class="navbar-links">Team</a>
-            <a href="" class="navbar-links">Project</a>
+            <a href="project.html" class="navbar-links">Project</a>
             <a href="deliverables.html" class="navbar-links">Deliverables</a>
-            <a href="download.html" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
+            <a href="" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
-        <section class="main-top">
-            <h1>Project</h1>
-            <h3>This is our project idk</h3>
-        </section>
+        <h1>Download</h1>
     </main>
     <footer>
         <p>&copy; 2025 Quoridor. All rights reserved.</p>
