--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <a href="html/team.html" class="navbar-links">Team</a>
             <a href="html/project.html" class="navbar-links">Project</a>
             <a href="html/deliverables.html" class="navbar-links">Deliverables</a>
-            <a href="" class="navbar-links" id="download-ico"><img src="media/download_ico.svg" class="navbar-links"></a>
+            <a href="html/download.html" class="navbar-links" id="download-ico"><img src="media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
         <section id="main-top">
             <h1>Quoridor</h1>
             <h2>The game that is... so fun idk</h2>
-            <a id="main-download">Download</a>
+            <a id="main-download" href="html/download.html">Download</a>
             <br>
             <a href="#main-mid"><img src="media/arr_down.svg" id="arr_down"></a>
         </section>
