--- a/html/team.html
+++ b/html/team.html
@@ -18,7 +18,7 @@
             <a href="" class="navbar-links">Team</a>
             <a href="project.html" class="navbar-links">Project</a>
             <a href="deliverables.html" class="navbar-links">Deliverables</a>
-            <a href="" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
+            <a href="download.html" class="navbar-links" id="download-ico"><img src="../media/download_ico.svg" class="navbar-links"></a>
         </div>
     </nav>
     <main>
