--- a/html/download.html
+++ b/html/download.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
-    <!-- <link rel="stylesheet" href="/css/teampage.css"> -->
+    <link rel="stylesheet" href="/css/downloadpage.css">
+    <link rel="stylesheet" href="/css/mainpage.css">
     <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
     <title>Quoridor</title>
 </head>
@@ -22,7 +23,15 @@
         </div>
     </nav>
     <main>
-        <h1>Download</h1>
+        <div class="download-half">
+            <h1>Try it now!</h1>
+            <a href="" id="main-download">Download</a>
+            <h2>Thank you!</h2>
+            <img src="../media/stars-graphic.png" style="width: 13%;">
+        </div>
+        <div class="card download-half">
+            blah blah blah
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Quoridor. All rights reserved.</p>
