main, team, download pages improved

--- a/html/download.html
+++ b/html/download.html
@@ -25,7 +25,11 @@
     <main>
         <div class="download-half">
             <h1>Try it now!</h1>
-            <a href="" id="main-download">Download</a>
+            <div>
+                <a href="" class="main-download" id="Windows">Download for Windows</a>
+                <a href="" class="main-download" id="MacOS">Download for MacOS</a>
+                <a href="" class="main-download" id="Linux">Download for Linux</a>
+            </div>
             <h2>Thank you!</h2>
             <img src="../media/stars-graphic.png" style="width: 13%;">
         </div>
