--- a/html/team.html
+++ b/html/team.html
@@ -29,33 +29,72 @@
                     <div class="image_cropper">
                         <img src="../media/placeholder.png">
                     </div>
-                    <p>
-                        I'm Andras blah blah blah
-                    </p>
+                    <h3>
+                        András Vándorffy<br>
+                        Role: the leader guy
+                    </h3>
+                    <br>
+                    <ul>
+                        <li>Pushes everyone to work</li>
+                        <li>Keeps track of what the tasks are</li>
+                        <li>Worked mainly on the core of the game</li>
+                        <li>Testing and debugging. So much debugging…</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <div class="image_cropper">
                         <img src="../media/placeholder.png">
                     </div>
-                    <p>
-                        I'm Illia blah blah blah
-                    </p>
+                    <h3>
+                        Illia Vladymyrov<br>
+                        Role: the model guy
+                    </h3>
+                    <br>
+                    <ul>
+                        <li>
+                            Formats code
+                        </li>
+                        <li>
+                            Invades (refactors) all the parts of the codebase
+                        </li>
+                        <li>Hates visual part</li>
+                        <li>
+                            Made most of the model and the saving-loading system
+                        </li>
+                    </ul>
                 </div>
                 <div class="card">
                     <div class="image_cropper">
                         <img src="../media/placeholder.png">
                     </div>
-                    <p>
-                        I'm Iskren blah blah blah
-                    </p>
+                    <h3>
+                        Iskren Rusimov<br>
+                        Role: the website guy
+                    </h3>
+                    <br>
+                    <ul>
+                        <li>Tells you how badly you lost to the AI</li>
+                        <li>Set up the Apache server</li>
+                        <li>Website main</li>
+                        <li>Passionate about cars and motorsports</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <div class="image_cropper">
                         <img src="../media/placeholder.png">
                     </div>
-                    <p>
-                        I'm Stefan blah blah blah
-                    </p>
+                    <h3>
+                        Stefan Slubschi<br>
+                        Role: the AI guy
+                    </h3>
+                    <br>
+                    <ul>
+                        <li>Makes sure you badly lose to the AI</li>
+                        <li>Algorithms and more algorithms</li>
+                        <li>Keeps track of team progress</li>
+                        <li>Does a bit of everything</li>
+                        <li>Loves rock climbing, volleyball and music</li>
+                    </ul>
                 </div>
             </article>
         </section>
