--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main>
         <section id="main-top">
             <h1>Quoridor</h1>
-            <h2>The game that is... so fun idk</h2>
-            <a id="main-download" href="html/download.html">Download</a>
+            <h2>A strategic maze-building race to the other side.</h2>
+            <a href="html/download.html" class="main-download">Download</a>
             <br>
             <a href="#main-mid"><img src="media/arr_down.svg" id="arr_down"></a>
         </section>
@@ -38,20 +38,7 @@
                 </video>
                 <div class="card main-mid-element">
                     <p>
-                        kjafhjaf;f<br>
-                        aflkshurhfjsfvs<br>
-                        jfsjgfefgysh<br>
-                        idk<br>
-                        some text<br>
-                        paragraph<br>
-                        blah blah<br>
-                        aaaaa<br>
-                        aaaaaaaa<br>
-                        jcksgyafgjabha<br>
-                        brrrrrr<br>
-                        tung tung tung sahur<br>
-                        bombardilo crocodilo<br>
-                        some more text idk<br>
+                        Quoridor is a fast-paced, abstract strategy board game where players race their pawns across the board while placing walls to block their opponents. With simple rules but deep tactical possibilities, the game challenges players to outthink and outmaneuver each other in a constantly shifting maze. Every move counts as you balance advancing toward victory with cleverly impeding your rival’s path.
                     </p>
                 </div>
             </article>
@@ -60,21 +47,21 @@
             <div class="card">
                 <img src="media/gamestart.png">
                 <p>
-                    this is how the game starts
+                    The game starts out with the player on the bottom of the screen and the AI on top. The game duration and number of walls left are visible at all times.
                 </p>
             </div>
             <img src="media/arr_right.svg" class="arr_right">
             <div class="card">
                 <img src="media/midgame.png">
                 <p>
-                    this is how it looks when you play
+                    You play in turns, moving or placing a wall.
                 </p>
             </div>
             <img src="media/arr_right.svg" class="arr_right">
             <div class="card">
                 <img src="media/gameover.png">
                 <p>
-                    this is the end screen
+                    At the end of the game the player can see various statistics about the match.
                 </p>
             </div>
         </section>
