Project page almost done, just missing some text and gitlab links.

--- a/html/project.html
+++ b/html/project.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
-    <!-- <link rel="stylesheet" href="/css/styles.css"> -->
+    <link rel="stylesheet" href="/css/projectpage.css">
     <title>Quoridor</title>
 </head>
 <body>
@@ -21,9 +21,73 @@
         </div>
     </nav>
     <main>
-        <section class="main-top">
-            <h1>Project</h1>
-            <h3>This is our project idk</h3>
+        <section class="sprints">
+            <h1>The Project</h1>
+
+            <article class="card">
+                <div>
+                    <h2>Sprint 1</h2>
+                    <ul>
+                        <li>Primarily about designing the various<br> aspects of the project and setting things up</li>
+                        <li>Software engineering</li>
+                        <li>Set up linux server, including database</li>
+                        <li>Database design</li>
+                        <li>POC code</li>
+                    </ul>
+                </div>
+                <div class="sprint-image">
+                    <img src="/media/Wireframe.png" alt="The wireframe of the game.">
+                </div>
+            </article>
+
+            <article class="card">
+                <div>
+                    <h2>Sprint 2</h2>
+                    <ul>
+                        <li>Refined our work from the previous sprint</li>
+                        <li>Created the beta version of the game
+                            <ul>
+                                <li>Movement and wall placement</li>
+                                <li>Saving and loading</li>
+                                <li>Leaderboard</li>
+                                <li>Game over screen statistics and graph</li>
+                            </ul>
+                        </li>
+                        <li>Setting up the web server</li>
+                        <li>Network sniffing task</li>
+                    </ul>
+                </div>
+                <div class="sprint-image">
+                    <img src="/media/game_beta_version.png" alt="A screenshot of the beta version of the game, illustrating the many ways it was not yet complete">
+                </div>
+            </article>
+
+            <article class="card">
+                <div>
+                    <h2>Sprint 3</h2>
+                    <ul>
+                        <li>Example text.</li>
+                        <li>Example text.</li>
+                    </ul>
+                </div>
+                <div class="sprint-image">
+                    <img src="/media/game_sprint3.png" alt="A screenshot of the game at the end of sprint 3. It shows a player winning by exploiting a bug in the AI.">
+                </div>
+            </article>
+
+            <article class="card">
+                <div>
+                    <h2>Sprint 4</h2>
+                    <ul>
+                        <li>Example text.</li>
+                        <li>Example text.</li>
+                    </ul>
+                </div>
+                <div class="sprint-image">
+                    <img src="/media/game_current_version.png" alt="A screenshot of the current version of the game, showcasing improved visuals and a much smarter AI.">
+                </div>
+            </article>
+
         </section>
     </main>
     <footer>
