Added picture to team page

--- a/html/team.html
+++ b/html/team.html
@@ -27,7 +27,7 @@
             <article>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/placeholder.png">
+                        <img src="../media/Andras.jpg" alt="A photo of András">
                     </div>
                     <h3>
                         András Vándorffy<br>
@@ -36,14 +36,15 @@
                     <br>
                     <ul>
                         <li>Pushes everyone to work</li>
-                        <li>Keeps track of what the tasks are</li>
+                        <li>Makes sure requirements are met</li>
                         <li>Worked mainly on the core of the game</li>
                         <li>Testing and debugging. So much debugging…</li>
+                        <li>Passionate about art</li>
                     </ul>
                 </div>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/placeholder.png">
+                        <img src="../media/Illia.jpg" alt="A photo of Illia">
                     </div>
                     <h3>
                         Illia Vladymyrov<br>
