Changed sprint 2 text and added photo to team page.

--- a/html/project.html
+++ b/html/project.html
@@ -49,7 +49,7 @@
                     <ul>
                         <li>Created the beta version of the game
                             <ul>
-                                <li>Movement and wall placement (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/4">András</a>)</li>
+                                <li>Movement and wall placement (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/4">András and Stefan</a>)</li>
                                 <li>Saving and loading for statistics (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
                                 <li>Leaderboard (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/5">Stefan and Illia</a>)</li>
                                 <li>Game over screen statistics and graph (example data) (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/3">Iskren</a>)</li>
