--- a/html/team.html
+++ b/html/team.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/placeholder.png">
+                        <img src="../media/Stefan.png" alt="A photo of Stefan.">
                     </div>
                     <h3>
                         Stefan Slubschi<br>
