--- a/html/project.html
+++ b/html/project.html
@@ -29,7 +29,7 @@
                     <h2>Sprint 1</h2>
                     <ul>
                         <li>Primarily about designing the various <br>aspects of the project and setting things up</li>
-                        <li>Software engineering (DCD: Illia)</li>
+                        <li><a href="https://docs.google.com/document/d/1fXiYgl4UpPlWV8JYs3dN-CO4701CkHSctjBfWByyZu4/edit?usp=drive_link">Software engineering</a> (DCD: Illia)</li>
                         <li>Set up linux server (Iskren)</li>
                         <li>Set up database server (Stefan)</li>
                         <li>Designed the database (Illia)</li>
@@ -49,7 +49,7 @@
                     <ul>
                         <li>Created the beta version of the game
                             <ul>
-                                <li>Movement and wall placement (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/4">András and Stefan</a>)</li>
+                                <li>Movement and wall placement <br>(<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/4">András and Stefan</a>)</li>
                                 <li>Saving and loading for statistics (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
                                 <li>Leaderboard (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/5">Stefan and Illia</a>)</li>
                                 <li>Game over screen statistics and graph (example data) (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/3">Iskren</a>)</li>
