S2 - Model structure: Illia & Andreas

--- a/html/project.html
+++ b/html/project.html
@@ -49,6 +49,7 @@
                     <ul>
                         <li>Created the beta version of the game
                             <ul>
+                                <li>Model structure (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/35">Illia</a>, Board: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/42">András</a>)</li>
                                 <li>Movement and wall placement <br>(<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/4">András and Stefan</a>)</li>
                                 <li>Saving and loading for statistics (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
                                 <li>Leaderboard (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/5">Stefan and Illia</a>)</li>
