--- a/html/download.html
+++ b/html/download.html
@@ -26,15 +26,27 @@
         <div class="download-half">
             <h1>Try it now!</h1>
             <div>
-                <a href="" class="main-download" id="Windows">Download for Windows</a>
-                <a href="" class="main-download" id="MacOS">Download for MacOS</a>
-                <a href="" class="main-download" id="Linux">Download for Linux</a>
+                <a href="../downloads/Quoridor-Windows.zip" class="main-download" id="Windows" download>Download for Windows</a>
+                <a href="../downloads/Quoridor-MacOS.zip" class="main-download" id="MacOS" download>Download for MacOS</a>
+                <a href="../downloads/Quoridor-Linux.zip" class="main-download" id="Linux" download>Download for Linux</a>
             </div>
             <h2>Thank you!</h2>
             <img src="../media/stars-graphic.png" style="width: 13%;">
         </div>
         <div class="card download-half">
-            blah blah blah
+            <h2>Installation instructions:</h2>
+            <h3>For Windows:</h3>
+            <ol>
+                <li>Extract and run Quoridor.exe</li>
+                <li>Enjoy!</li>
+            </ol>
+            <h3>For MacOS and Linux:</h3>
+            <ol>
+                <li>Extract and run the .dmg or .sh file relatively.</li>
+                <li>Go through the installation wizard.</li>
+                <li>Quoridor is now available as a program on your computer.</li>
+                <li>Enjoy!</li>
+            </ol>
         </div>
     </main>
     <footer>
