--- a/html/team.html
+++ b/html/team.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/placeholder.png">
+                        <img src="../media/Iskren.jpg">
                     </div>
                     <h3>
                         Iskren Rusimov<br>
