Added links between project and deliverables page.

--- a/html/deliverables.html
+++ b/html/deliverables.html
@@ -23,8 +23,8 @@
     <main>
         <h1>Deliverables</h1>
         <section>
-            <h2>Sprint 3</h2>
-            <article class="card">
+            <h2><a href="project.html#sprint-3">Sprint 3</a></h2>
+            <article class="card" id="programming-game-S3">
                 <h3>Programming: Game</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -59,7 +59,7 @@
                         <p>Example gameplay</p>
                     </div>
                     <div class="flex-deliverables-element">
-                        <img src="../media/gameover.png" class="flex-deliverables-element">
+                        <img src="../media/gameover.png" class="flex-deliverables-element" id="game-over-screen">
                         <p>Game over screen</p>
                     </div>
                     <div class="flex-deliverables-element">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="programming-website-S3">
                 <h3>Programming: Website</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="DB-to-CSV">
                 <h3>Infrastructure: DB to CSV script</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="website-deployment">
                 <h3>Infrastructure: Website deployment</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="database-redesign">
                 <h3>Data & AI: Database redesign</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="rule-based-intelligence">
                 <h3>Data & AI: Rule Based Intelligence</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -158,11 +158,12 @@
                         <img src="../media/minimax_tree.png" class="flex-deliverables-element">
                         <p>Example small Minimax game tree</p>
                     </div>
+                </div>
             </article>
         </section>
         <section>
-            <h2>Sprint 4</h2>
-            <article class="card">
+            <h2><a href="project.html#sprint-4">Sprint 4</a></h2>
+            <article class="card" id="programming-game-S4">
                 <h3>Programming: Game</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
@@ -182,7 +183,7 @@
                     </div>
                 </div>
             </article>
-            <article class="card">
+            <article class="card" id="programming-website-S4">
                 <h3>Programming: Website</h3>
                 <div class="flex-deliverables">
                     <ul class="flex-deliverables-element">
