--- a/html/project.html
+++ b/html/project.html
@@ -65,19 +65,21 @@
                 </div>
             </article>
 
-            <article class="card">
+            <article class="card" id="sprint-3">
                 <div>
                     <h2>Sprint 3</h2>
                     <ul>
                         <li>Application “final” version:
                             <ul>
-                                <li>Fully connected view and model <br>(Game screen: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/42">András</a>, Data: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
-                                <li>Implemented AI player using a rule based engine (<a href="">Stefan</a>)</li>
+                                <li>Fully connected <a href="deliverables.html#programming-game-S3" class="deliverables-link">view and model</a> <br>(Game screen: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/42">András</a>, Data: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
+                                <li>Implemented AI player using a <a href="deliverables.html#rule-based-intelligence" class="deliverables-link">rule based engine</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/40">Stefan</a>)</li>
                             </ul>
                         </li>
-                        <li>Implemented saving and loading game state (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/39">Illia</a>)</li>
-                        <li>Connected game over screen statistics and graph with database (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
-                        <li>DB to CSV task (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/55">Illia</a>)</li>
+                        <li>Implemented <a href="deliverables.html#programming-game-S3" class="deliverables-link">saving and loading</a> game state (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/39">Illia</a>)</li>
+                        <li>Connected <a href="deliverables.html#game-over-screen" class="deliverables-link">game over screen statistics and graph</a> with <a href="deliverables.html#programming-game-S3" class="deliverables-link">database</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/38">Illia</a>)</li>
+                        <li>Started work on this <a href="deliverables.html#programming-website-S3" class="deliverables-link">website</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/41">Iskren</a>)</li>
+                        <li>Deployed the website to the <a href="deliverables.html#website-deployment" class="deliverables-link">webserver</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/54">Iskren</a>)</li>
+                        <li><a href="deliverables.html#DB-to-CSV" class="deliverables-link">DB to CSV</a> task (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/55">Illia</a>)</li>
                         <li>Fixing the bugs that were unnoticed until a visual was ready</li>
                     </ul>
                 </div>
@@ -86,16 +88,15 @@
                 </div>
             </article>
 
-            <article class="card">
+            <article class="card" id="sprint-4" >
                 <div>
                     <h2>Sprint 4</h2>
                     <ul>
-                        <li>Improved UI and UX (UI: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/56">Stefan</a>, UX: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/49">András</a>)</li>
+                        <li>Improved <a href="deliverables.html#programming-game-S4" class="deliverables-link">UI and UX</a> (UI: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/56">Stefan</a>, UX: <a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/49">András</a>)</li>
                         <li>Further improved and debugged AI (Stefan)</li>
-                        <li>Refactoring (Board: Illia and Stefan, GamesScreenPresenter: András)</li>
-                        <li>Added difficulty options (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/50">András</a>)</li>
-                        <li>Created this website (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/41">Iskren</a>)</li>
-                        <li>Deployed the website to the webserver (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/54">Iskren</a>)</li>
+                        <li><a href="deliverables.html#programming-game-S4" class="deliverables-link">Refactoring</a> (Board: Illia and Stefan, GamesScreenPresenter: András)</li>
+                        <li>Added <a href="deliverables.html#programming-game-S4" class="deliverables-link">difficulty options</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/50">András</a>)</li>
+                        <li>Finished the <a href="deliverables.html#programming-website-S4" class="deliverables-link">website</a> (<a href="https://gitlab.com/kdg-ti/integration-1.2/2024-2025/acs102-t1/ACS102-T1-Game/-/issues/41">Iskren</a>)</li>
                     </ul>
                 </div>
                 <div class="sprint-image">
